feat: 添加微信登录，优化air监听
