# docs/swagger.json
@@ -334,6 +334,56 @@
                     }
                 }
             }
+        },
+        "/api/v1/wx/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "认证"
+                ],
+                "summary": "小程序登录",
+                "parameters": [
+                    {
+                        "description": "生成令牌失败",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.LoginReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "object",
+                                            "properties": {
+                                                "token": {
+                                                    "type": "string"
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -421,7 +471,6 @@
                     "type": "string"
                 },
                 "status": {
-                    "description": "pending, paid, processing, completed, cancelled",
                     "type": "string"
                 },
                 "total_amount": {
@@ -431,7 +480,8 @@
                     "type": "string"
                 },
                 "user_id": {
-                    "type": "string"
+                    "description": "指向 wx_user.id",
+                    "type": "integer"
                 }
             }
         },
@@ -475,8 +525,8 @@
                     "type": "string"
                 },
                 "user_id": {
-                    "description": "小程序用户标识",
-                    "type": "string"
+                    "description": "指向 wx_user.id",
+                    "type": "integer"
                 }
             }
         },
